Finished navigation with 3 more web pages
Began adding text in each web page. Planning to finish all text and move onto images.

--- a/culture.html
+++ b/culture.html
@@ -9,21 +9,19 @@
 <body>
     <div class="container">
         <div class="title">
-            <h1>How To Make Tacos</h1>
+            <h1>Culture of Tacos</h1>
         </div>
         <div class="navigation">
             <ul>
-                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="ingredients.html">Ingredients</a></li>
                 <li><a href="steps.html">Steps</a></li>
-                <li><a href="culture.html">Culture</a></li>
+                <li><a class="active" href="culture.html">Culture</a></li>
               </ul>
         </div>
         <div class="leftbox">
-            <h2>Tacos are food that many enjoy because of many different things. Tacos are easily customizable towards <br>
-                ones perferences, but this is a recipe on how to make a beef taco. Tacos are apart of Mexicos culture and <br>
-                it is such a great food that is made in other parts of the world such as the US, Canada, Korea, and many countries <br>
-                in Europe and Asia. Tacos can carry many flavours and ingredients as well as either soft shell or hard shell. <br>
+            <h2>As mentioned before, Tacos are apart of Mexican culture. They would be freshly made with corn tortillas and fish. <br>
+                Now today, Tacos are brought to more countries and are made daily by thousands. 
             </h2>
         </div> 
         <div class="rightbox">
