--- a/steps.html
+++ b/steps.html
@@ -9,22 +9,30 @@
 <body>
     <div class="container">
         <div class="title">
-            <h1>How To Make Tacos</h1>
+            <h1>Steps to Making a Taco</h1>
         </div>
         <div class="navigation">
             <ul>
-                <li><a class="active" href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="ingredients.html">Ingredients</a></li>
-                <li><a href="steps.html">Steps</a></li>
+                <li><a class="active" href="steps.html">Steps</a></li>
                 <li><a href="culture.html">Culture</a></li>
               </ul>
         </div>
         <div class="leftbox">
-            <h2>Tacos are food that many enjoy because of many different things. Tacos are easily customizable towards <br>
-                ones perferences, but this is a recipe on how to make a beef taco. Tacos are apart of Mexicos culture and <br>
-                it is such a great food that is made in other parts of the world such as the US, Canada, Korea, and many countries <br>
-                in Europe and Asia. Tacos can carry many flavours and ingredients as well as either soft shell or hard shell. <br>
+            <h2>Here are the steps to making a taco.
             </h2>
+
+            <h3>
+                <li>Add ground beef into pan over medium heat</li> <br>
+                <li>Dice and add onion, pepper, garlic</li> <br>
+                <li>Add spices and tomato sauce after meat is fully browned</li> <br>
+                <li>Grate cheese</li> <br>
+                <li>Dice tomato</li> <br>
+                <li>Shred lettuce</li> <br>
+                <li>Assemble the taco with salsa added</li> <br>
+
+            </h3>
         </div> 
         <div class="rightbox">
 
