More writing, aded images, added links.
one image for each web page, a link for most, and more writing added for each.

--- a/culture.html
+++ b/culture.html
@@ -20,12 +20,16 @@
               </ul>
         </div>
         <div class="leftbox">
-            <h2>As mentioned before, Tacos are apart of Mexican culture. They would be freshly made with corn tortillas and fish. <br>
-                Now today, Tacos are brought to more countries and are made daily by thousands. 
+            <h2>As mentioned before, Tacos are apart of <a href="https://www.twistedtaco.com/the-history-of-the-taco" target="_blank">Mexican</a> culture. They would be freshly made with corn tortillas and fish <br>
+                back when tacos were first made. Now today, tacos are brought to more countries and are made daily by thousands. <br>
+                When tacos were first being made, they were made by miners as fast and affordable food. Later in 1905, tacos would <br>
+                be brought to the USA by mexican immigrants who would bring their lunches on jobsites as they work. Ultimately, tacos <br>
+                would be a food that connected people. A few years later, American ingredients would be added with tacos, such as ground <br>
+                beef and cheese, though tacos would still be enjoyed by thousands and now even more.
             </h2>
         </div> 
         <div class="rightbox">
-
+            <img src="taco2.jpg" width="440px" style="border: 3px solid black;">
         </div>
         <div class="footer">
             
