--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
               </ul>
         </div>
         <div class="leftbox">
-            <h2>Tacos are food that many enjoy because of many different things. Tacos are easily customizable towards <br>
+            <h2>Tacos are food that many enjoy because of many different things. <a href="https://en.wikipedia.org/wiki/Taco" target="_blank">Tacos</a> are easily customizable towards <br>
                 ones perferences, but this is a recipe on how to make a beef taco. Tacos are apart of Mexicos culture and <br>
                 it is such a great food that is made in other parts of the world such as the US, Canada, Korea, and many countries <br>
                 in Europe and Asia. Tacos can carry many flavours and ingredients as well as either soft shell or hard shell. <br>
             </h2>
         </div> 
         <div class="rightbox">
-
+            <img src="tacos.jpg" width="500px" style="border: 3px solid black;">
         </div>
         <div class="footer">
             
