--- a/steps.html
+++ b/steps.html
@@ -25,17 +25,24 @@
 
             <h3>
                 <li>Add ground beef into pan over medium heat</li> <br>
+                Cook meat thoroughly to avoid <a href="https://my.clevelandclinic.org/health/diseases/16638-e-coli-infection" target="_blank">Foodborne Illnesses</a> <br> <br>
                 <li>Dice and add onion, pepper, garlic</li> <br>
+                Add these soon before cooking meat to perfection. <br> <br>
                 <li>Add spices and tomato sauce after meat is fully browned</li> <br>
+                Make sure meat is not red because it will mix with the sauce. <br> <br>
                 <li>Grate cheese</li> <br>
+                Add cheese right after meat is done to melt it. <br> <br>
                 <li>Dice tomato</li> <br>
+                These depend on prefence. <br> <br>
                 <li>Shred lettuce</li> <br>
+                These also depend on preference. <br> <br>
                 <li>Assemble the taco with salsa added</li> <br>
+                Salsa is an important ingredient for flavour and to not dry the mouth.
 
             </h3>
         </div> 
         <div class="rightbox">
-
+            <img src="tacoprepare.jpg" width="440px" style="border: 3px solid black;">
         </div>
         <div class="footer">
             
