--- a/ingredients.html
+++ b/ingredients.html
@@ -25,21 +25,28 @@
             </h2>
         <h3>
             <li>1/4 lb Ground Beef</li> <br>
+            Meat source for protein. Easily changeable by vegan meat. <br> <br>
             <li>1/4 Onion</li> <br>
-            <li>1/8 Pepper</li> <br>
+            Vegetable that can make the flavour pop. <br> <br>
             <li>1 Clove Garlic</li> <br>
+            Will make flavour much better with meat. <br> <br>
             <li>25ml Tomato Sauce</li> <br>
+            Use to make the taco less dry. <br> <br>
+            <li>Salsa</li> <br>
+            Use to make the taco less dry and more flavourful. <br> <br>
+            Spices <br> <br>
             <li>3ml Chilli Powder</li> <br>
             <li>2ml Cumin</li> <br>
-            <li>Salt and Pepper</li> <br>
+            <li>Salt and Pepper</li> <br> <br> 
+            Preference Choices <br> <br>
             <li>Cheese of Choice</li> <br>
             <li>Tomato</li> <br>
             <li>Lettuce</li> <br>
-            <li>Salsa</li> <br>
+            <li>1/8 Pepper</li> <br>
         </h3>
         </div> 
         <div class="rightbox">
-
+            <img src="tacobar.webp" width="530px" style="border: 3px solid black;">
         </div>
         <div class="footer">
             
