More writing and using span within HTML, started footer text
only wrote footer in home page index, used span for headings

--- a/ingredients.html
+++ b/ingredients.html
@@ -24,6 +24,7 @@
 
             </h2>
         <h3>
+            <span style="font-size: 23px;">You Need</span> <br> <br>
             <li>1/4 lb Ground Beef</li> <br>
             Meat source for protein. Easily changeable by vegan meat. <br> <br>
             <li>1/4 Onion</li> <br>
@@ -34,11 +35,11 @@
             Use to make the taco less dry. <br> <br>
             <li>Salsa</li> <br>
             Use to make the taco less dry and more flavourful. <br> <br>
-            Spices <br> <br>
+            <span style="font-size: 23px;">Spices</span> <br> <br>
             <li>3ml Chilli Powder</li> <br>
             <li>2ml Cumin</li> <br>
             <li>Salt and Pepper</li> <br> <br> 
-            Preference Choices <br> <br>
+            <span style="font-size: 23px;">Preference Choices</span> <br> <br>
             <li>Cheese of Choice</li> <br>
             <li>Tomato</li> <br>
             <li>Lettuce</li> <br>
