Added logo by changing the grid layout
Taco logo added after fixing title padding errors

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
     <div class="container">
+        <div class="logo">
+            <img src="tacoicon-removebg-preview.png" width="80px">
+        </div>
         <div class="title">
-            <h1>How To Make Tacos</h1>
+            <h1>How to Make a Taco</h1>
         </div>
         <div class="navigation">
             <ul>
@@ -24,8 +27,10 @@
                 ones perferences, but this is a recipe on how to make a beef taco. Tacos are apart of Mexicos culture and <br>
                 it is such a great food that is made in other parts of the world such as the US, Canada, Korea, and many countries <br>
                 in Europe and Asia. Tacos can carry many flavours and ingredients as well as either soft shell or hard shell. <br> <br>
+                <span style="font-size: 28px;"><u>Let's Begin</u></span> <br>
                 On this website, I will being showing you how to make a ground beef taco. It will contain vegetables and spices with <br>
-                most customizable by preference. 
+                most customizable by preference. The final product will be able to feed two people and will use ground beef which can <br>
+                be changed with vegan meat.
             </h2>
         </div> 
         <div class="rightbox">
