--- a/culture.html
+++ b/culture.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="logo">
+            <img src="tacoicon-removebg-preview.png" width="80px">
+        </div>
         <div class="title">
             <h1>Culture of Tacos</h1>
         </div>
