--- a/ingredients.html
+++ b/ingredients.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="container">
+        <div class="logo">
+            <img src="tacoicon-removebg-preview.png" width="80px">
+        </div>
         <div class="title">
             <h1>Ingredients for Tacos</h1>
         </div>
@@ -24,7 +27,7 @@
 
             </h2>
         <h3>
-            <span style="font-size: 23px;">You Need</span> <br> <br>
+            <span style="font-size: 23px;"><u>You Need</u></span> <br> <br>
             <li>1/4 lb Ground Beef</li> <br>
             Meat source for protein. Easily changeable by vegan meat. <br> <br>
             <li>1/4 Onion</li> <br>
@@ -35,11 +38,11 @@
             Use to make the taco less dry. <br> <br>
             <li>Salsa</li> <br>
             Use to make the taco less dry and more flavourful. <br> <br>
-            <span style="font-size: 23px;">Spices</span> <br> <br>
+            <span style="font-size: 23px;"><u>Spices</u></span> <br> <br>
             <li>3ml Chilli Powder</li> <br>
             <li>2ml Cumin</li> <br>
             <li>Salt and Pepper</li> <br> <br> 
-            <span style="font-size: 23px;">Preference Choices</span> <br> <br>
+            <span style="font-size: 23px;"><u>Preference Choices</u></span> <br> <br>
             <li>Cheese of Choice</li> <br>
             <li>Tomato</li> <br>
             <li>Lettuce</li> <br>
@@ -50,7 +53,7 @@
             <img src="tacobar.webp" width="530px" style="border: 3px solid black;">
         </div>
         <div class="footer">
-            
+            Continue onto the Steps page to begin making the taco.
         </div>
     </div>
 
