More writing within the culture page.
getting to the end of the webpage. End of the day

--- a/culture.html
+++ b/culture.html
@@ -23,18 +23,26 @@
               </ul>
         </div>
         <div class="leftbox">
-            <h2>As mentioned before, Tacos are apart of <a href="https://www.twistedtaco.com/the-history-of-the-taco" target="_blank">Mexican</a> culture. They would be freshly made with corn tortillas and fish <br>
+            <h2><span style="font-size: 27px;"><u>History</u></span> <br>As mentioned before, Tacos are apart of <a href="https://www.twistedtaco.com/the-history-of-the-taco" target="_blank">Mexican</a> culture. They would be freshly made with corn tortillas and fish <br>
                 back when tacos were first made. Now today, tacos are brought to more countries and are made daily by thousands. <br>
                 When tacos were first being made, they were made by miners as fast and affordable food. Later in 1905, tacos would <br>
                 be brought to the USA by mexican immigrants who would bring their lunches on jobsites as they work. Ultimately, tacos <br>
-                would be a food that connected people. A few years later, American ingredients would be added with tacos, such as ground <br>
-                beef and cheese, though tacos would still be enjoyed by thousands and now even more.
+                would be a food that connected people. A few years later, American ingredients would be added with tacos, such as <br>
+                ground beef and cheese, though tacos would still be enjoyed by thousands and now even more. <br> <br>
+                <span style="font-size: 27px;"><u>Inspirations</u></span> <br>
+                Mexican dishes did not just stop at tacos. They would expand to meet peoples preferences as well as tourists to Mexico. <br>
+                <u>Buritos</u> would be introduced as a new dish which would be easier to eat and hold. It could store more ingredients <br>
+                without making more of a mess. <br>
+                <u>Tostados</u> is a similar dish to tacos but uses a flat crispy shell. It is a beautiful looking dish that can make <br>
+                the dining table look much more fancier.
+
             </h2>
         </div> 
         <div class="rightbox">
             <img src="taco2.jpg" width="440px" style="border: 3px solid black;">
         </div>
         <div class="footer">
+            Thank you for using my taco recipe!
         </div>
     </div>
 
