--- a/ingredients.html
+++ b/ingredients.html
@@ -30,6 +30,8 @@
             <span style="font-size: 23px;"><u>You Need</u></span> <br> <br>
             <li>1/4 lb Ground Beef</li> <br>
             Meat source for protein. Easily changeable by vegan meat. <br> <br>
+            <li>Tortilla</li> <br>
+            Use gluten free tortillas if you have allergies or use a hard shell. <br> <br>
             <li>1/4 Onion</li> <br>
             Vegetable that can make the flavour pop. <br> <br>
             <li>1 Clove Garlic</li> <br>
@@ -53,7 +55,7 @@
             <img src="tacobar.webp" width="530px" style="border: 3px solid black;">
         </div>
         <div class="footer">
-            Continue onto the Steps page to begin making the taco.
+            Continue on to the Steps page to begin making the taco.
         </div>
     </div>
 
