--- a/steps.html
+++ b/steps.html
@@ -26,7 +26,7 @@
             <h2>Here are the steps to making a taco.
             </h2>
 
-            <h3>
+            <h4>
                 <li>Add ground beef into pan over medium heat</li> <br>
                 Cook meat thoroughly to avoid <a href="https://my.clevelandclinic.org/health/diseases/16638-e-coli-infection" target="_blank">Foodborne Illnesses</a> <br> <br>
                 <li>Dice and add onion, pepper, garlic</li> <br>
@@ -42,13 +42,13 @@
                 <li>Assemble the taco with salsa added</li> <br>
                 Salsa is an important ingredient for flavour and to not dry the mouth.
 
-            </h3>
+            </h4>
         </div> 
         <div class="rightbox">
             <img src="tacoprepare.jpg" width="440px" style="border: 3px solid black;">
         </div>
         <div class="footer">
-            
+            Read the Culture page if you are interested in the history of the taco.
         </div>
     </div>
 
