Writing culture page, extra style sheet for ingredients
changed grid layout for ingredients page, wrote more in culture page and index

--- a/culture.html
+++ b/culture.html
@@ -34,7 +34,9 @@
                 <u>Buritos</u> would be introduced as a new dish which would be easier to eat and hold. It could store more ingredients <br>
                 without making more of a mess. <br>
                 <u>Tostados</u> is a similar dish to tacos but uses a flat crispy shell. It is a beautiful looking dish that can make <br>
-                the dining table look much more fancier.
+                the dining table look much more fancier. <br>
+                <u>Quesadillas</u> are a pizza like dish that is more of a sandwich as well. They are easy too eat as well as prepare <br>
+                and can feed multiple people. Meat and cheese are popular ingredients for this dish.
 
             </h2>
         </div> 
