--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <span style="font-size: 28px;"><u>Let's Begin</u></span> <br>
                 On this website, I will being showing you how to make a ground beef taco. It will contain vegetables and spices with <br>
                 most customizable by preference. The final product will be able to feed two people and will use ground beef which can <br>
-                be changed with vegan meat.
+                be changed with vegan meat incase of dietary restrictions.
             </h2>
         </div> 
         <div class="rightbox">
