--- a/ingredients.html
+++ b/ingredients.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <title>How to make beef tacos</title>
 </head>
 <body>
@@ -31,7 +31,7 @@
             <li>1/4 lb Ground Beef</li> <br>
             Meat source for protein. Easily changeable by vegan meat. <br> <br>
             <li>Tortilla</li> <br>
-            Use gluten free tortillas if you have allergies or use a hard shell. <br> <br>
+            Gluten free tortillas and hard shells are substitues. <br> <br>
             <li>1/4 Onion</li> <br>
             Vegetable that can make the flavour pop. <br> <br>
             <li>1 Clove Garlic</li> <br>
@@ -40,6 +40,11 @@
             Use to make the taco less dry. <br> <br>
             <li>Salsa</li> <br>
             Use to make the taco less dry and more flavourful. <br> <br>
+        </h3>
+        </div>
+        <div class="leftbox2">
+        <h3>
+            <br> <br> <br> <br>
             <span style="font-size: 23px;"><u>Spices</u></span> <br> <br>
             <li>3ml Chilli Powder</li> <br>
             <li>2ml Cumin</li> <br>
@@ -50,7 +55,8 @@
             <li>Lettuce</li> <br>
             <li>1/8 Pepper</li> <br>
         </h3>
-        </div> 
+        </div>
+         
         <div class="rightbox">
             <img src="tacobar.webp" width="530px" style="border: 3px solid black;">
         </div>
